# legible

./: .editorconfig  .gitignore  .lit-cache  LICENSE  README.md  calc.py  dune-project  main.py  spec.md  test.lit
_build/: log
examples/: rpn.lit
lib/: annotations.ml  ast.ml  build.ml  cache.ml  dag.ml  dune  lexer.ml  parser.ml  symbol_table.ml  tangle.ml  test_lexer.ml  weave.ml
test/: dune  test_annotations.ml  test_build.ml  test_cache.ml  test_dag.ml  test_parser.ml  test_symbol_table.ml  test_tangle.ml  test_weave.ml
